# cloudera.cloud

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  TESTING.md  bindep.txt  cloud.py  conftest.py  galaxy.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: construct_docs.yml  generator-generic-ossf-slsa3-publish.yml  label_pr.yml  lint_docs.yml  publish_docs.yml  reset_pr.yml  static.yml  validate_pr.yml  validate_pr_docs.yml
builder/: requirements.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
dest/: .gitignore  antsibull-docs.cfg  build.sh  conf.py  requirements.txt
docs/: .buildinfo  account_auth.html  account_auth_info.html  account_cred_info.html  datahub_cluster.html  datahub_cluster_info.html  datahub_definition_info.html  datahub_template_info.html  datalake.html  datalake_info.html  datalake_runtime_info.html  de.html  de_info.html  de_virtual_cluster.html  de_virtual_cluster_info.html  df.html  df_customflow_info.html  df_deployment.html  df_deployment_info.html  df_info.html  df_readyflow.html  df_readyflow_info.html  df_service.html  df_service_info.html  dw_cluster.html  dw_cluster_info.html  dw_database_catalog.html  dw_database_catalog_info.html  dw_virtual_warehouse.html  dw_virtual_warehouse_info.html  env.html  env_auth.html  env_auth_info.html  env_automated_user_sync_info.html  env_cred.html  env_cred_info.html  env_idbroker.html  env_idbroker_info.html  env_info.html  env_proxy.html  (+19 more)
docs/_sources/: account_auth.rst.txt  datahub_cluster.rst.txt  datahub_cluster_info.rst.txt  datahub_definition_info.rst.txt  datahub_template_info.rst.txt  datalake.rst.txt  de.rst.txt  de_info.rst.txt  de_virtual_cluster.rst.txt  df.rst.txt  df_deployment.rst.txt  df_deployment_info.rst.txt  df_info.rst.txt  df_readyflow.rst.txt  df_readyflow_info.rst.txt  df_service.rst.txt  df_service_info.rst.txt  dw_cluster.rst.txt  env.rst.txt  env_auth.rst.txt  env_auth_info.rst.txt  env_idbroker.rst.txt  env_idbroker_info.rst.txt  env_info.rst.txt  env_proxy.rst.txt  env_telemetry.rst.txt  env_user_sync.rst.txt  env_user_sync_info.rst.txt  freeipa_info.rst.txt  iam_user_info.rst.txt  index.rst.txt  opdb.rst.txt
docs/docsite/: config.yml  extra-docs.yml  links.yml
docs/docsite/rst/: test.rst
docsbuild/: .gitignore  antsibull-docs.cfg  build.sh  cloudera.css  conf.py  requirements.txt
docsrc/: account_auth_info.rst  account_cred_info.rst  datahub_cluster.rst  datahub_definition_info.rst  datahub_template_info.rst  datalake_info.rst  datalake_runtime_info.rst  de_virtual_cluster_info.rst  df.rst  df_customflow_info.rst  df_info.rst  df_service.rst  dw_cluster.rst  dw_cluster_info.rst  dw_database_catalog.rst  dw_database_catalog_info.rst  dw_virtual_warehouse.rst  dw_virtual_warehouse_info.rst  env.rst  env_automated_user_sync_info.rst  env_cred.rst  env_cred_info.rst  env_proxy_info.rst  iam_group.rst  iam_group_info.rst  iam_resource_role_info.rst  index.rst  ml.rst  ml_info.rst  ml_workspace_access.rst  opdb_info.rst
meta/: runtime.yml
plugins/: README.md
plugins/doc_fragments/: cdp_auth_options.py  cdp_client.py  cdp_sdk_options.py
plugins/lookup/: cai_workspace.py  cdp_service.py  datahub_definition.py  datahub_instance.py  datahub_service.py  datahub_template.py  datalake_instance.py  datalake_runtime.py  datalake_service.py  env_domain.py  env_freeipa.py  env_freeipa_domain.py  env_freeipa_fqdn.py  env_freeipa_hosts.py
plugins/module_utils/: cdp_client.py  cdp_common.py  cdp_consumption.py  cdp_de.py  cdp_df.py  cdp_df_client.py  cdp_env.py  cdp_iam.py  cdp_ml.py  cdp_service.py  common.py
plugins/modules/: access_token.py  account_auth.py  account_auth_info.py  account_cred_info.py  compute_usage_info.py  datahub_cluster.py  datahub_cluster_info.py  datahub_cluster_recipe.py  datahub_cluster_repair.py  datahub_definition_info.py  datahub_recipe.py  datahub_recipe_info.py  datahub_template_info.py  datalake.py  datalake_backup.py  datalake_backup_info.py  datalake_info.py  datalake_restore.py  datalake_runtime_info.py  de.py  de_info.py  de_virtual_cluster.py  de_virtual_cluster_info.py  df.py  df_customflow.py  df_customflow_info.py  df_customflow_version.py  df_deployment.py  df_deployment_info.py  df_info.py  df_readyflow.py  df_readyflow_info.py  df_service.py  df_service_info.py  dw_cluster.py  dw_cluster_info.py  dw_data_visualization.py  dw_data_visualization_info.py  dw_database_catalog.py  dw_database_catalog_info.py  (+35 more)
site/: BUILDING_DOCS.md  Makefile  conf.py  generate_rst.sh  make.bat
site/_static/: width.css
tests/: TESTING.md  config.yml
tests/integration/: integration_config.yml.template  requirements.txt
tests/integration/prereqs/aws-semi-private/: main.tf  test_inv.yml  variables.tf
tests/integration/targets/common/: aliases
tests/integration/targets/common/defaults/: main.yml
tests/integration/targets/datalake_multi_az/: aliases
tests/integration/targets/datalake_single_az/: aliases
tests/integration/targets/environ/: aliases
tests/integration/targets/environ_multi_az/: aliases
tests/integration/targets/environ_single_az/: aliases
tests/integration/targets/idbroker_single_az/: aliases
tests/integration/targets/setup_env_multi_az/: aliases
tests/integration/targets/setup_env_single_az/: aliases
tests/integration/targets/setup_idbroker_multi_az/: aliases
tests/integration/targets/teardown/: aliases
tests/integration/targets/teardown_dl/: aliases
tests/integration/targets/xaccount/: aliases
tests/unit/: __init__.py  conftest.py  requirements.txt
tests/unit/plugins/modules/: utils.py
(+100 files in other folders)
