[project]
name = "cloud"
dynamic = ["version"]
description = "cloudera.cloud Ansible collection"
readme = "README.md"
requires-python = ">=3.9" # hatch-semver requires 3.9+
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Webster Mudge", email = "wmudge@cloudera.com" },
]
classifiers = []
dependencies = []

[tool.hatch.version]
path = "galaxy.yml"
pattern = "version:\\s+(?P<version>[\\d\\.]+)"
scheme = "semver"
validate-bump = true

[tool.hatch.envs.default]
detached = true
dependencies = [
  "pre-commit",
  # "coverage[toml]",
  "pytest",
  "pytest-mock",
  # "pytest-cov",
  "molecule",
  "molecule-plugins",
  "molecule-plugins[ec2]",
  "ansible-core<2.17", # For RHEL 8 support
  "cdpy @ git+https://github.com/cloudera-labs/cdpy@main#egg=cdpy",
  "ansible-lint",
  "antsibull-docs >= 2.0.0, < 3.0.0",
]

[tool.hatch.envs.default.scripts]
lint = [
  "pre-commit run -a",
  "antsibull-docs lint-collection-docs --plugin-docs --validate-collection-refs=all --skip-rstcheck ."
]

[tool.hatch.envs.hatch-test]
matrix-name-format = "{variable}_{value}"
extra-dependencies = [
  "molecule",
  "molecule-plugins",
  "molecule-plugins[ec2]",
  # "ansible-core<2.17", # Handled by matrix overrides
  "cdpy @ git+https://github.com/cloudera-labs/cdpy@main#egg=cdpy",
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "pip list --verbose",
    "pytest{env:HATCH_TEST_ARGS:} {args}"
]

# Ansible 2.18 - Python >= 3.11
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11"]
ansible = ["2.18"]

# Ansible 2.17 - Python >= 3.10
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10"]
ansible = ["2.17"]

# Ansible 2.16 - Python >= 3.10
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10"]
ansible = ["2.16"]

# Ansible 2.15 - Python <= 3.12, >=3.10
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.11", "3.10"]
ansible = ["2.15"]

[tool.hatch.envs.hatch-test.overrides]
matrix.ansible.dependencies = [
  { value = "ansible-core==2.18", if = ["2.18"] },
  { value = "ansible-core==2.17", if = ["2.17"] },
  { value = "ansible-core==2.16", if = ["2.16"] },
  { value = "ansible-core==2.15", if = ["2.15"] },
]

[tool.hatch.envs.docs]
python = "3.12"
detached = true
extra-dependencies = [
  "ansible-core<2.17", # For RHEL 8 support
  # "antsibull-docs >= 2.0.0, < 3.0.0",
  "antsibull-docs @ git+https://github.com/cloudera-labs/antsibull-docs@cldr-docsite#egg=antsibull-docs",
  "ansible-pygments",
  "sphinx",
  "sphinx-ansible-theme >= 0.9.0",
  "antsichaut",
]

[tool.hatch.envs.docs.scripts]
build = "docsbuild/build.sh"
changelog = [
  # Read the version in galaxy.yml via hatch itself (normalizes release candidates, etc.)
  # Use 'hatch version' to manage the version, i.e. 'hatch version major,rc'
  "antsibull-changelog release --version $(hatch version)",
  "antsichaut --repository cloudera-labs/cloudera.cloud --since_version=latest",
  "antsibull-changelog generate",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore:AnsibleCollectionFinder has already been configured",
  "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
markers = [
  "integration_api: marks tests as integration tests using CDP API credentials",
  "integration_token: marks tests as integration tests using CDP token credentials",
  "slow: marks tests as slow tests",
]

[build-system]
requires = [
  "hatchling",
  "hatch-semver",
]
build-backend = "hatchling.build"
